# agent-kit

./: .env.example  .gitignore  ADDING_PROFILES.md  AGENT_SKILL_MATRIX.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_INSTALL.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README.ru.md  SOURCE_SELECTION.md  install.ps1  install.sh  kit-manifest.json  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  profile_proposal.md
.github/workflows/: ci.yml  docs.yml
agent-center/: AGENTS.md  AGENTS.ru.md
agent-center/config/: cron-jobs.yaml  gateway-telegram.yaml  hermes-target-profile.yaml  profiles.yaml
agent-center/kanban/: board-contract.md
agent-center/owner-context/: README.md
agent-center/profiles/: business-analyst.profile.json  carousel-creator.profile.json  designer.profile.json  economist.profile.json  legal-ops.profile.json  main-operator.profile.json  marketer.profile.json  methodologist.profile.json  profile-factory.profile.json  psychological-support.profile.json  researcher.profile.json  technical-engineer.profile.json  telegram-channel-watcher.profile.json
agent-center/prompts/: delegation.md  final-report.md  final-report.ru.md  main-agent-system.md
agent-center/references/: README.md
agent-center/skills/: README.md  README.ru.md
agent-center/templates/: receipt.md  smoke-tests.md  source-card.md  task-card.md  telegram-channel-candidates.md  telegram-channel-report.md
agent-center/wiki/: architecture.md  context-management.md  local-embedding.md  memory-policy.md  operating-contract.md  origin-return-protocol.md  origin-return-protocol.ru.md  security-checklist.md  team-roster.md
docs/: ADDING_PROFILES.en.md  AGENT_SKILL_MATRIX.en.md  AGENT_SKILL_MATRIX.ru.md  ARCHITECTURE.en.md  ARCHITECTURE.ru.md  ARCHITECTURE_REVIEW.en.md  ARCHITECTURE_REVIEW.ru.md  GITHUB_INSTALL.en.md  GITHUB_INSTALL.ru.md  IMPLEMENTATION_PLAN.en.md  ONE_FILE_HERMES_KIT_INSTALLER.en.md  ONE_FILE_HERMES_KIT_INSTALLER.ru.md  ORIGIN_RETURN_PROTOCOL.en.md  SOURCE_SELECTION.en.md  SOURCE_SELECTION.ru.md
docs/assets/: extra.css
docs_site/assets/: extra.js
docs_site/en/: index.md
docs_site/ru/: index.md
scripts/: check_locale_sanity.py  check_orp.py  check_release.py  create_profile_skeleton.py  health_check.py  setup_kit.py
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
(+157 files in other folders)
